--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
   <title>Muktar Aliyu</title> 
   <!-- font awesome 6  --> 
   <link rel="stylesheet" href="./assets/all.min.css">
-  <!-- <link rel="stylesheet" href="/assets/bootstrap.min.css"> -->
+
   <!-- custom css file link  --> 
   <link rel="stylesheet" href="./assets/homeStyle.css"> 
 <!-- Favicon -->
@@ -35,10 +35,11 @@
    <h1>I'M <span>Aliyu Muktar </span> </h1>
    <h3>💘<span> web enthuasist</span></h3>
    <h3>💘<span> CEH enthuasist</span></h3>
-   <h3><i class="fas fa-graduation-cap"></i><span> CEO TechLead Academy</span></h3>
+   <h3><a href="https://techleadacademy.netlify.app"><i class="fas fa-graduation-cap" ></i><span style="color:teal"> CEO TechLead Academy</span></a></h3>
 
    <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a> 
-  </section> <!-- home section ends --> <!-- about section starts  --> 
+  </section> 
+  <!-- home section ends --> <!-- about section starts  --> 
   <section class="about" id="about"> 
    <h1 class="heading"> <span>about</span> me </h1> 
    <div class="row"> 
@@ -80,7 +81,7 @@
                     </label>
                 </div></span></h3>
     
-     <a href="./assets/A-Muktar.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a> 
+     <a href="./assets/A_Muktar.pdf"  download name='A-Muktar_CV'><button class="btn"> download CV <i class="fas fa-download"></i> </button></a> 
     </div> 
     <div class="counter"> 
      <div class="box"> <span>2</span> 
@@ -155,9 +156,9 @@
      <h3 class="title">Social</h3> 
      <div class="info"> 
       <h3> <i class="fas fa-envelope"></i> <a href="mailto:amuktar064@gmail.com">Email</a> </h3> 
-      <h3> <i class="fas fa-github"></i> <a href="https://github.com/A-Muktar">Github</a> </h3> 
-      <h3> <i class="fas fa-linkedin"></i> <a href="https://linkedin.com/amuktar">LinkedIn</a> </h3>
-      <h3> <i class="fas fa-whatsapp"></i> <a href="tel:https://wa.me/+2348102075944">WhatsApp</a> </h3> 
+      <h3> <i class="fab fa-github"></i> <a href="https://github.com/A-Muktar">Github</a> </h3> 
+      <h3> <i class="fab fa-linkedin"></i> <a href="https://linkedin.com/amuktar">LinkedIn</a> </h3>
+      <h3> <i class="fab fa-whatsapp blue-color"></i> <a href="tel:https://wa.me/+2348102075944">WhatsApp</a> </h3> 
       <h3> <i class="fas fa-map-marker-alt"></i> Kwara State Nig. </h3> 
      </div> 
     </div> 
