--- a/homepage.html
+++ b/homepage.html
@@ -157,7 +157,7 @@
      <div class="info"> 
       <h3> <i class="fas fa-envelope"></i> <a href="mailto:amuktar064@gmail.com">Email</a> </h3> 
       <h3> <i class="fab fa-github"></i> <a href="https://github.com/A-Muktar">Github</a> </h3> 
-      <h3> <i class="fab fa-linkedin"></i> <a href="https://linkedin.com/amuktar">LinkedIn</a> </h3>
+      <h3> <i class="fab fa-linkedin"></i> <a href="http://www.linkedin.com/in/muktar-aliyu">LinkedIn</a> </h3>
       <h3> <i class="fab fa-whatsapp blue-color"></i> <a href="tel:https://wa.me/+2348102075944">WhatsApp</a> </h3> 
       <h3> <i class="fas fa-map-marker-alt"></i> Kwara State Nig. </h3> 
      </div> 
