--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="3; url=./homepage.html">
     <link rel="stylesheet" href="./assets/style.css">
-
-    <title>matrix</title>
+    <link rel="shortcut icon" href="./assets/po.jpg" type="image/x-icon">
+    <title>Muktar Aliyu</title>
 </head>
 <body>
     <canvas>
