--- a/homepage.html
+++ b/homepage.html
@@ -162,14 +162,17 @@
       <h3> <i class="fas fa-map-marker-alt"></i> Kwara State Nig. </h3> 
      </div> 
     </div> 
-    <form action=""> 
-     <input type="text" placeholder="name" class="box"> 
-     <input type="email" placeholder="email" class="box"> 
-      <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea> <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button> 
+    <form action="" onsubmit="sendEmail(); reset(); return false;"> 
+     <input type="text" placeholder="name"  id="name" class="box" required> 
+     <input type="email" placeholder="email" id="email" class="box" required> 
+      <textarea name="" id="" cols="30" rows="10" class="box message" id="msg"  placeholder="message" required></textarea>
+       <button type="submit" value="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button> 
     </form> 
    </div> 
   </section> <!-- contact section ends --> <!-- scroll top button  --> <a href="#home" class="top"> <img src="images/scroll-top-img.png" alt=""> </a> <!-- jquery cdn link  --> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> <!-- custom js file link  --> 
-  <script src="/assets/homeScript.js"></script> 
+  <script src="./assets/homeScript.js"></script> 
+  <script src="./assets/form.js"></script>
+ 
 </main>
 </body></html>
