--- a/homepage.html
+++ b/homepage.html
@@ -89,6 +89,12 @@
      <div class="box"> <span>2</span> 
       <h3>years of experience</h3> 
      </div> 
+     <div class="box"> <span>3</span> 
+        <h3>Programming Certificates</h3> 
+       </div>
+       <div class="box"> <span>5</span> 
+        <h3>Hacking Certificates</h3> 
+       </div>
      <div class="box"> <span>11</span> 
       <h3>project completed</h3> 
      </div> 
@@ -98,6 +104,7 @@
      <div class="box"> <span>3</span> 
       <h3>awards won</h3> 
      </div> 
+
     </div> 
    </div> 
   </section> <!-- about section ends --> <!-- education section starts  --> 
