--- a/homepage.html
+++ b/homepage.html
@@ -50,11 +50,11 @@
      <h3> <span> post : </span> <b>front end developer</b> </h3> 
      <h3> <span> language : </span> <b>Hausa, English, Fulani, Yoruba and French</b></h3>
      <h3><span>I love tech, especially the web, so I want to develop the web ecosystem, and also, I want to contribute to human society through the web technology.</span></h3>
-     <h2 class="text-gradient">Junior Developer</h2>
+     <h2 class="text-gradient">web Developer</h2>
      <hr size="5" color="teal" width="205em">
 
      <h3><span>I am currently studying Bachelor of science Degree in computer science at <abbr
-                        title="École Superiuere des Technologies Avancee et de Management">ESTAM</abbr> University, Cotonou, Benin. Over a year, I have got the opportunity to learn and work with some advance technologies, such as, <abbr title="HyperText Markup Language"> HTML,</abbr> <abbr
+                        title="École Superiuere des Technologies Avancee et de Management">ESTAM</abbr> University, Cotonou, Benin. Over 2 years, I have got the opportunity to learn and work with some advance technologies, such as, <abbr title="HyperText Markup Language"> HTML,</abbr> <abbr
                         title="Cascading StyleSheet"> CSS, </abbr> Python with some knowledge in Javascript and Java
                     programming language.</span></h3>
                     <h3><span>As an enthusiastic and creative upcoming technologist with hands-on skills in a wide range of
