--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+    content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+
+  <meta name="title" content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+  <meta property="og:title" content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+  <meta name="twitter:title" content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+  <meta property="og:description"
+    content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+  <meta name="twitter:description"
+    content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+
+
     <meta http-equiv="refresh" content="3; url=./homepage.html">
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="shortcut icon" href="./assets/po.jpg" type="image/x-icon">
