--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description"
-    content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+        content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
 
-  <meta name="title" content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
-  <meta property="og:title" content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
-  <meta name="twitter:title" content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
-  <meta property="og:description"
-    content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
-  <meta name="twitter:description"
-    content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+    <meta name="title"
+        content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+    <meta property="og:title"
+        content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+    <meta name="twitter:title"
+        content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+    <meta property="og:description"
+        content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
+    <meta name="twitter:description"
+        content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
 
 
     <meta http-equiv="refresh" content="3; url=./homepage.html">
@@ -22,11 +26,12 @@
     <link rel="shortcut icon" href="./assets/po.jpg" type="image/x-icon">
     <title>Muktar Aliyu</title>
 </head>
+
 <body>
     <canvas>
-    
+
     </canvas>
-<script src="./assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
+
 </html>
-   
