--- a/homepage.html
+++ b/homepage.html
@@ -40,11 +40,11 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#education">Education</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Home <i class="fas fa-home-alt"></i></a></li>
+                <li><a href="#about">About <i class="fas fa-user"></i></a></li>
+                <li><a href="#education">Education <i class="fas fa-graduation-cap"></i></a></li>
+                <li><a href="#portfolio">Portfolio <i class="fas fa-project-diagram"></i></a></li>
+                <li><a href="#contact">Contact <i class="fas fa-contact-card"></i></a></li>
             </ul>
         </nav>
     </header> <!-- header section ends -->
