--- a/homepage.html
+++ b/homepage.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
-    <meta name="description"
-        content="Muktar Aliyu | Web developer | I love to work on exciting projects, I'm always looking for better & exciting opportunities.
+    <meta name="description" content="Muktar Aliyu | Web developer | I love to work on exciting projects, I'm always looking for better & exciting opportunities.
         " />
 
     <meta name="title"
@@ -71,7 +70,8 @@
                 <h3> <span> Post : </span> <b>Front-end Developer</b> </h3>
                 <h3> <span> Language : </span> <b>Hausa, English, Fulani, Yoruba and French</b></h3>
                 <h3><span>I love tech, especially the web, so I want to develop the web ecosystem, and also, I want to
-                        contribute to human society through the web technology. <br> I love to work on exciting projects, I'm always looking for better & exciting opportunities.
+                        contribute to human society through the web technology. <br> I love to work on exciting
+                        projects, I'm always looking for better & exciting opportunities.
                     </span></h3>
                 <h2 class="text-gradient">Web Developer</h2>
                 <hr size="5" color="teal" width="205em">
@@ -216,15 +216,20 @@
                 <button type="submit" value="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
             </form>
         </div>
-    </section> <!-- contact section ends -->
+
+        <p style="font-size: 150%; color:rgb(178, 186, 193); border-top: .2rem solid rgb(93, 89, 89); padding:1em 4em;">&copy; 2021 Muktar Aliyu</p>
+    </section> 
+    <!-- contact section ends -->
     <!-- scroll top button  --> <a href="#home" class="top"> <img src="images/scroll-top-img.png" alt=""> </a>
+
+</main>
     <!-- jquery cdn link  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- custom js file link  -->
     <script src="./assets/homeScript.js"></script>
     <script src="./assets/form.js"></script>
 
-    </main>
+    
 </body>
 
 </html>
