--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="./assets/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="./assets/homeStyle.css">
+    <link rel="stylesheet" href="./assets/home.css">
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/po.jpg" type="image/x-icon">
 </head>
@@ -74,7 +74,7 @@
                         projects, I'm always looking for better & exciting opportunities.
                     </span></h3>
                 <h2 class="text-gradient">Web Developer</h2>
-                <hr size="5" color="teal" width="205em">
+                <hr size="5" color="teal" width="202em">
 
                 <h3><span>I am currently studying Bachelor of science Degree in computer science at <abbr
                             title="École Superiuere des Technologies Avancee et de Management">ESTAM</abbr> University,
@@ -217,7 +217,7 @@
             </form>
         </div>
 
-        <p style="font-size: 150%; color:rgb(178, 186, 193); border-top: .2rem solid rgb(93, 89, 89); padding:1em 4em;">&copy; 2021 Muktar Aliyu</p>
+        <p style="font-size: 150%; color:rgb(178, 186, 193); border-top: .2rem solid rgb(93, 89, 89); padding:1em 4em;">&copy; 2022 Muktar Aliyu</p>
     </section> 
     <!-- contact section ends -->
     <!-- scroll top button  --> <a href="#home" class="top"> <img src="images/scroll-top-img.png" alt=""> </a>
