--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         content="Muktar Aliyu | Web developer | Love coding | Interested in Networking | CyberSecurity" />
 
 
-    <meta http-equiv="refresh" content="3; url=./homepage.html">
+    <meta http-equiv="refresh" content="3; url=./home.html">
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="shortcut icon" href="./assets/po.jpg" type="image/x-icon">
     <title>Muktar Aliyu</title>
