--- a/404.html
+++ b/404.html
@@ -33,12 +33,10 @@
 <p>Sorry about that.</p>
 <ul>
 <li>
-<a href="/">Go to the homepage</a>
+<a href="./index.html">Go to the homepage</a>
 </li>
 <li>
 <a href="/support/">Contact Support</a>
-</li>
-<li>
 </li>
 </ul>
 </main>
