--- a/404.html
+++ b/404.html
@@ -29,7 +29,7 @@
 <body>
 <main>
 <h1 data-test-id="text-404">404</h1>
-<p>I'm afraid you've found a wrong session that doesn't exist on <span style="color: dodgerblue;">Muktar's profile.</span>  That can happen when you follow a link to something that has been deleted, modified. Or the link was incorrect to begin&nbsp;with.</p>
+<p>I'm afraid you've found a wrong session that doesn't exist on <span style="color: dodgerblue;">Muktar's profile.</span>  That can happen when you follow a link to something that has been deleted, modified.</p>
 <p>Sorry about that.</p>
 <ul>
 <li>
