--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#home">Home <i class="fas fa-home-alt"></i></a></li>
+                <li><a href="#">Home <i class="fas fa-home-alt"></i></a></li>
                 <li><a href="#about">About <i class="fas fa-user"></i></a></li>
                 <li><a href="#education">Education <i class="fas fa-graduation-cap"></i></a></li>
                 <li><a href="#portfolio">Portfolio <i class="fas fa-project-diagram"></i></a></li>
@@ -80,7 +80,7 @@
                             title="École Superiuere des Technologies Avancee et de Management">ESTAM</abbr> University,
                         Cotonou, Benin. Over 2 years, I have got the opportunity to learn and work with some advance
                         technologies, such as, <abbr title="HyperText Markup Language"> HTML,</abbr> <abbr
-                            title="Cascading StyleSheet"> CSS, </abbr> Python with some knowledge in Javascript and Java
+                            title="Cascading StyleSheet"> CSS, </abbr> Python and it's framework Django with some knowledge in Javascript and Java
                         programming language.</span></h3>
                 <h3><span>As an enthusiastic and creative upcoming technologist with hands-on skills in a wide range of
                         software tools, and programming languages, my goal is to become a <abbr class="text-info"
