--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 <a href="./index.html">Go to the homepage</a>
 </li>
 <li>
-<a href="/support/">Contact Support</a>
+<a href="./index.html">Contact Support</a>
 </li>
 </ul>
 </main>
