--- a/home.html
+++ b/home.html
@@ -87,29 +87,43 @@
                             title="Someone who can work as a front-end and back-end developer.">FullStack
                             Developer,</abbr>
                         and a <abbr title="Certified Ethical Hacker">CEH.</abbr> </span></h3>
+                        <!-- Skills section -->
                 <h3><span>
-                        <div id="skills" class="skill">
-                            <h2>SKILLS</h2>
-                            <label for="html">HTML:
-                                <meter id="html" min="0" max="100" low="35" high="65" optimum="95" value="75"></meter>
-                            </label><br>
-                            <label for="css">CSS:
-                                <meter id="css" min="0" max="100" low="35" high="65" optimum="95" value="92"></meter>
-                            </label><br>
-                            <label for="python">Python:
-                                <meter id="python" min="0" max="100" low="35" high="65" optimum="95" value="65"></meter>
-                            </label><br>
-                            <label for="python">Bootstrap:
-                                <meter id="python" min="0" max="100" low="35" high="65" optimum="95" value="85"></meter>
-                            </label><br>
-                            <label for="js">JavaScript:
-                                <meter id="js" min="0" max="100" low="35" high="65" optimum="95" value="45"></meter>
-                            </label><br>
-                            <label for="java">Java:
-                                <meter id="java" min="0" max="100" low="35" high="65" optimum="95" value="20"></meter>
-                            </label>
-                        </div>
-                    </span></h3>
+                    <h1 style="text-align: center; padding-bottom: 2px; margin-bottom: 5%;" class="heading "><span>SKILLS</span></h1>
+                    <p>HTML</p>
+                    <div class="container">
+                        <div class="skill html">95%</div>
+                    </div>
+
+                    <p>Bootstrap</p>
+                    <div class="container">
+                        <div class="skill bootstrap">85%</div>
+                    </div>
+                    <p>CSS</p>
+                    <div class="container">
+                        <div class="skill css">80%</div>
+                    </div>
+
+                    <p>Python</p>
+                    <div class="container">
+                        <div class="skill python">62%</div>
+                    </div>
+
+                    <p>Django</p>
+                    <div class="container">
+                        <div class="skill django">48%</div>
+                    </div>
+
+                    <p>JavaScript</p>
+                    <div class="container">
+                        <div class="skill js">30%</div>
+                    </div>
+
+                    <p>Java</p>
+                    <div class="container">
+                        <div class="skill java">15%</div>
+                    </div>
+
 
                 <a href="./assets/A_Muktar.pdf" download name='A-Muktar_CV'><button class="btn"> Download CV <i
                             class="fas fa-download"></i> </button></a>
