--- a/home.html
+++ b/home.html
@@ -39,11 +39,11 @@
         </div>
         <nav class="navbar">
             <ul>
-                <li><a href="#">Home <i class="fas fa-home-alt"></i></a></li>
-                <li><a href="#about" data-after="about">About <i class="fas fa-user"></i></a></li>
-                <li><a href="#education" data-after="education">Education <i class="fas fa-graduation-cap"></i></a></li>
-                <li><a href="#portfolio" data-after="portfolio">Portfolio <i class="fas fa-project-diagram"></i></a></li>
-                <li><a href="#contact" data-after="contact">Contact <i class="fas fa-contact-card"></i></a></li>
+                <li><a href="#">Home </a></li>
+                <li><a href="#about" data-after="about">About </a></li>
+                <li><a href="#education" data-after="education">Education </a></li>
+                <li><a href="#portfolio" data-after="portfolio">Portfolio </a></li>
+                <li><a href="#contact" data-after="contact">Contact </a></li>
             </ul>
         </nav>
     </header> <!-- header section ends -->
