--- a/home.html
+++ b/home.html
@@ -92,40 +92,45 @@
                     <h1 style="text-align: center; padding-bottom: 2px; margin-bottom: 5%;" class="heading "><span>SKILLS</span></h1>
                     <p>HTML</p>
                     <div class="container">
-                        <div class="skill html">95%</div>
+                        <div class="skill html"></div>
                     </div>
 
                     <p>Bootstrap</p>
                     <div class="container">
-                        <div class="skill bootstrap">85%</div>
+                        <div class="skill bootstrap"></div>
                     </div>
                     <p>CSS</p>
                     <div class="container">
-                        <div class="skill css">80%</div>
+                        <div class="skill css"></div>
                     </div>
 
                     <p>Python</p>
                     <div class="container">
-                        <div class="skill python">62%</div>
+                        <div class="skill python"></div>
+                    </div>
+
+                    <p>MySQL</p>
+                    <div class="container">
+                        <div class="skill sql"></div>
                     </div>
 
                     <p>Django</p>
                     <div class="container">
-                        <div class="skill django">48%</div>
+                        <div class="skill django"></div>
                     </div>
 
                     <p>JavaScript</p>
                     <div class="container">
-                        <div class="skill js">30%</div>
+                        <div class="skill js"></div>
                     </div>
 
                     <p>Java</p>
                     <div class="container">
-                        <div class="skill java">15%</div>
+                        <div class="skill java"></div>
                     </div>
 
 
-                <a href="./assets/A_Muktar.pdf" download name='A-Muktar_CV'><button class="btn"> Download CV <i
+                <a href="./assets/A_Muktar_CV.pdf" download name='A-Muktar_CV'><button class="btn"> Download CV <i
                             class="fas fa-download"></i> </button></a>
             </div>
             <div class="counter">
