--- a/home.html
+++ b/home.html
@@ -218,12 +218,12 @@
             <div class="content">
                 <h3 class="text-gradient">Social</h3>
                 <div class="info">
-                    <h3> <i class="fas fa-envelope"></i> <a href="mailto:amuktar064@gmail.com">Email</a> </h3>
-                    <h3> <i class="fab fa-github"></i> <a href="https://github.com/A-Muktar">Github</a> </h3>
+                    <h3> <i class="fas fa-envelope"></i> <a href="mailto:zenoftech.info@gmail.com">Email</a> </h3>
+                    <h3> <i class="fab fa-github"></i> <a href="https://github.com/zenoftech">Github</a> </h3>
                     <h3> <i class="fab fa-linkedin"></i> <a href="http://www.linkedin.com/in/muktar-aliyu">LinkedIn</a>
                     </h3>
                     <h3> <i class="fab fa-whatsapp blue-color"></i> <a
-                            href="tel:https://wa.me/+2348102075944">WhatsApp</a> </h3>
+                            href="https://api.whatsapp.com/send/?phone=%2B2348102075944&text=Hello+Muktar!+How+are+you+doing?&type=phone_number&app_absent=0">WhatsApp</a> </h3>
                     <h3> <i class="fas fa-map-marker-alt"></i> Kwara State Nig. </h3>
                 </div>
             </div>
