--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     <!-- home section starts   -->
     <section class="home" id="home">
         <h3>HI THERE!</h3>
-        <h1>I'M <span>Aliyu Muktar </span> </h1>
+        <h1>I'M <span>Muktar Aliyu</span> </h1>
         <h3>💘<span> web enthuasist</span></h3>
         <h3>💘<span> CEH enthuasist</span></h3>
         <h3><a href="https://techleadacademy.netlify.app"><i class="fas fa-graduation-cap"></i><span style="color:teal">
