--- a/home.html
+++ b/home.html
@@ -227,7 +227,7 @@
                     <h3> <i class="fas fa-map-marker-alt"></i> Kwara State Nig. </h3>
                 </div>
             </div>
-            <form action="https://formspree.io/f/xjvdaybq" method="post" onsubmit="sendEmail(); reset(); return false;">
+            <form action="" method="post" onsubmit="sendEmail(); reset(); return false;">
                 <input type="text" placeholder="name" id="name" class="box" required>
                 <input type="email" placeholder="email" id="email" class="box" required>
                 <textarea name="" id="" cols="30" rows="10" class="box message" id="msg" placeholder="message"
